# cren

./: .gitignore  CMakeLists.txt  README.md
cmake/: Bitfuncs_CMakeLists.txt  CMakeLists.txt  Integers_CMakeLists.txt
include/bitfuncs/: bitfuncs.h
include/integers/: uint128.h
src/: uint128.c
src/bitfuncs/: bitfuncs.c
src/integers/: uint128.c
tests/: CMakeLists.txt  uint128_test.c
tests/bitfuncs/: bitfuncs_test.c
tests/integers/: uint128_test.c
